--- a/iafas/src/main/webapp/mainIafasPrivilegiosUsuario.xhtml
+++ b/iafas/src/main/webapp/mainIafasPrivilegiosUsuario.xhtml
@@ -3,56 +3,43 @@
 <html 	xmlns="http://www.w3.org/1999/xhtml"
 	    xmlns:h="http://java.sun.com/jsf/html"
 		xmlns:f="http://java.sun.com/jsf/core"
-		>
+		xmlns:p="http://primefaces.org/ui">
 <head>
-        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/css/bootstrap.min.css"
-         rel="stylesheet" integrity="sha384-+0n0xVW2eSR5OomGNYDnhzAbDsOXxcvSN1TPprVMTNDbiYZCxYbOOl7+AMvyTG2x" crossorigin="anonymous"/>
-         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.1/dist/js/bootstrap.bundle.min.js"
-          integrity="sha384-gtEjrD/SeCtmISkJkNUaaKMoLD0//ElJ19smozuHV6z3Iehds+3Ulb9Bn9Plx0x4" crossorigin="anonymous">
-         </script>
+         <title>JSF Tree Selection Example</title>
 </head>
-<body>
-
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingOne">
-      <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-        Accordion Item #1
-      </button>
-    </h2>
-    <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>This is the first item's accordion body.</strong> It is shown by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingTwo">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-        Accordion Item #2
-      </button>
-    </h2>
-    <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-        <strong>This is the second item's accordion body.</strong> It is hidden by default, until the collapse plugin adds the appropriate classes that we use to style each element. These classes control the overall appearance, as well as the showing and hiding via CSS transitions. You can modify any of this with custom CSS or overriding our default variables. It's also worth noting that just about any HTML can go within the <code>.accordion-body</code>, though the transition does limit overflow.
-      </div>
-    </div>
-  </div>
-  <div class="accordion-item">
-    <h2 class="accordion-header" id="headingThree">
-      <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-        Accordion Item #3
-      </button>
-    </h2>
-    <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
-      <div class="accordion-body">
-       <div class="form-check">
-  <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault" />
-  <label class="form-check-label" for="flexCheckDefault" >
-    Default checkbox
-  </label>
-</div>
-      </div>
-    </div>
-  </div>
-</body>
+<h:body>
+    	<h:form>
+		    <p:growl id="msgs" showDetail="true" escape="false"/>
+		  
+		    <h5>Checkbox</h5>
+        <p:tree value="#{treeSelectionView.root3}" var="doc"
+                selectionMode="checkbox"
+                selection="#{treeSelectionView.selectedNodes2}">
+            <p:treeNode expandedIcon="pi pi-folder-open" collapsedIcon="pi pi-folder">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+            <p:treeNode type="app" icon="pi pi-save">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+            <p:treeNode type="document" icon="pi pi-file">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+            <p:treeNode type="excel" icon="pi pi-file-excel">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+            <p:treeNode type="travel" icon="pi pi-file-pdf">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+            <p:treeNode type="picture" icon="pi pi-image">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+            <p:treeNode type="video" icon="pi pi-video">
+                <h:outputText value="#{doc.name}"/>
+            </p:treeNode>
+        </p:tree>
+		 	<br/>
+		    <p:commandButton value="Show selected" update="msgs" icon="ui-icon-newwin"
+		                actionListener="#{treeSelectionView.displaySelectedMultiple(treeSelectionView.selectedNodes)}"/>
+		</h:form>
+    </h:body>
 </html>
